# linguagem_Rust

./: README.md  main
add/adder/src/: main.rs
invader/: Cargo.toml
invader/src/: main.rs
rust/: Cargo.toml
rust/src/: controle_fluxo_repeticao.rs  enum_estudo.rs  funcao.rs  gameofguess.rs  input.rs  lib.rs  main.rs  match_estudo.rs  ownership.rs  referencia_e_borrowing.rs  sintaxe_metodo_struct.rs  slice.rs  struct.rs  tipo_string.rs  tipos_de_dados.rs  variaveis_mutabilidade_shadowing.rs
rust_1/: Cargo.toml  poem.txt
rust_1/src/: arrays.rs  cli_app.rs  closure.rs  consts.rs  criptografia_crifra_cesar.rs  deref_trait.rs  drop_trait.rs  enum_types.rs  error.rs  fltk_GUI.rs  for_loop.rs  functions.rs  generic_types.rs  hasmap.rs  if_statements.rs  interior_mutability.rs  iterator.rs  lib.rs  lifetimes.rs  loops.rs  main.rs  ownership.rs  reference_count_RC.rs  smart_point.rs  structs.rs  traits.rs  tuples.rs  variables.rs  vec_types.rs  while_loop.rs
rust_1/src/api/: api.rs  mod.rs
rust_1/src/api/routes/: catalogo.rs  info.rs  ping.rs
rust_2/: Cargo.toml
rust_2/src/: constant.rs  if.rs  input.rs  match.rs  mutable.rs  shadowing.rs  strings.rs  variables.rs
