[package]
name = "rust_1"
version = "0.1.0"
authors = ["leonardoPach", "Leo <pachecodossantos17@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
fltk = "1.4.0"
fltk-flex = "0.2.1"
fltk-theme = "0.7.0"


